add active query parameter
